syntax = "proto3";

package com.epam.drill.admin.writer.rawdata.api.v1;

option java_outer_classname = "DataIngestProto";

message BuildPayload {
  string group_id = 1;
  string app_id = 2;
  string commit_sha = 3;
  string build_version = 4;
  string branch = 5;
  string commit_date = 6;
  string commit_message = 7;
  string commit_author = 8;
}

message CoveragePayload {
  string instance_id = 1;
  repeated SingleClassCoveragePayload coverage = 2;

  message SingleClassCoveragePayload {
    string classname = 1;
    string test_id = 2;
    repeated bool probes = 3;
  }
}

message InstancePayload {
  string group_id = 1;
  string app_id = 2;
  string instance_id = 3;
  string commit_sha = 4;
  string build_version = 5;
}

message MethodPayload {
  string group_id = 1;
  string app_id = 2;
  string commit_sha = 3;
  string build_version = 4;
  string instance_id = 5;
  repeated SingleMethodPayload methods = 6;

  message SingleMethodPayload {
    string classname = 1;
    string name = 2;
    string params = 3;
    string return_type = 4;
    int32 probes_count = 5;
    int32 probes_start_pos = 6;
    string body_checksum = 7;
  }
}